bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: rental-platform-architecture
    labels:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: rental-platform-architecture
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: rental-platform-architecture
                com.docker.compose.service: api
                com.docker.compose.network.backend: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: api
                  image: rental-platform-architecture-api
                  imagePullPolicy: IfNotPresent
                  securityContext:
                    readOnlyRootFilesystem: true
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget -qO- http://127.0.0.1:4000/health/ready >/dev/null || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: api-4000
                      containerPort: 4000
