bridge/base/watchtower-deployment.yaml
#! watchtower-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: watchtower
    namespace: rental-platform-architecture
    labels:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: watchtower
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: rental-platform-architecture
            com.docker.compose.service: watchtower
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: rental-platform-architecture
                com.docker.compose.service: watchtower
                com.docker.compose.network.backend: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: watchtower
                  image: containrrr/watchtower:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: watchtower-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: var-run-docker-sock
                      mountPath: /var/run/docker.sock
            volumes:
                - name: var-run-docker-sock
                  hostPath:
                    path: /var/run/docker.sock
