bridge/base/api-expose.yaml
#! api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: rental-platform-architecture
    labels:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: api
    ports:
        - name: api-4000
          port: 4000
          targetPort: api-4000
