bridge/base/watchtower-expose.yaml
#! watchtower-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: watchtower
    namespace: rental-platform-architecture
    labels:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: watchtower
spec:
    selector:
        com.docker.compose.project: rental-platform-architecture
        com.docker.compose.service: watchtower
    ports:
        - name: watchtower-8080
          port: 8080
          targetPort: watchtower-8080
