bridge/base/frontend-network-policy.yaml
#! frontend-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: frontend-network-policy
    namespace: rental-platform-architecture
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.frontend: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.frontend: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.frontend: "true"
